<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.org.dicodingeventapp.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
        <action
            android:id="@+id/action_navigation_home_to_searchActivity"
            app:destination="@id/searchActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.org.dicodingeventapp.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.org.dicodingeventapp.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished" >

        <action
            android:id="@+id/action_navigation_finished_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <activity
        android:id="@+id/detailEventActivity"
        android:name="com.org.dicodingeventapp.ui.detailEvent.DetailEventActivity"
        android:label="activity_detail_event"
        tools:layout="@layout/activity_detail_event" >
        <argument
            android:name="queryId"
            app:argType="string"
            android:defaultValue="nothing" />
        <argument
            android:name="isFavorite"
            app:argType="integer"
            android:defaultValue="0" />
    </activity>
    <activity
        android:id="@+id/searchActivity"
        android:name="com.org.dicodingeventapp.ui.search.SearchActivity"
        android:label="activity_search"
        tools:layout="@layout/activity_search" >
        <argument
            android:name="query"
            app:argType="string"
            app:nullable="true" />
    </activity>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.org.dicodingeventapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.org.dicodingeventapp.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />


</navigation>